--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
   "fastrace-datadog",
   "fastrace-opentelemetry",
   "fastrace-futures",
+  "fastrace-perfetto",
   "test-statically-disable",
 ]
 resolver = "2"
@@ -25,6 +26,7 @@ fastrace-macro = { version = "0.7.8", path = "fastrace-macro" }
 fastrace-datadog = { path = "fastrace-datadog" }
 fastrace-futures = { path = "fastrace-futures" }
 fastrace-jaeger = { path = "fastrace-jaeger" }
+fastrace-perfetto = { path = "fastrace-perfetto" }
 fastrace-opentelemetry = { path = "fastrace-opentelemetry" }
 
 # crates.io dependencies
