--- a/fastrace-perfetto/Cargo.toml
+++ b/fastrace-perfetto/Cargo.toml
@@ -14,10 +14,15 @@ rust-version.workspace = true
 
 [dependencies]
 fastrace = { path = "../fastrace", features = ["enable"] }
+fastant = "0.1"
 prost = "0.13.5"
 prost-derive = "0.13.5"
 bytes = "1.10"
 thread-id = "4.2.1"
+rtrb = "0.3"
+
+# TODO: remove once_cell once MSRV is above 1.80
+once_cell = "1.19"
 
 [dev-dependencies]
 
