--- a/fastrace/Cargo.toml
+++ b/fastrace/Cargo.toml
@@ -36,6 +36,7 @@ fastrace = { workspace = true, features = ["enable"] }
 fastrace-datadog = { workspace = true }
 fastrace-jaeger = { workspace = true }
 fastrace-opentelemetry = { workspace = true }
+rt-trace = { path = "../rt-trace" }
 flume = "0.11"
 futures-timer = "3"
 log = { workspace = true }
