--- a/fastrace/Cargo.toml
+++ b/fastrace/Cargo.toml
@@ -14,6 +14,7 @@ repository.workspace = true
 rust-version.workspace = true
 
 [features]
+default = ["enable"]
 enable = []
 
 [dependencies]
@@ -76,3 +77,6 @@ name = "spsc"
 [[bench]]
 harness = false
 name = "object_pool"
+
+[profile.release]
+debug = true
