--- a/rt-trace/Cargo.toml
+++ b/rt-trace/Cargo.toml
@@ -23,6 +23,12 @@ rtrb = "0.3"
 # TODO: remove once_cell once MSRV is above 1.80
 once_cell = "1.19"
 
+[target.'cfg(unix)'.dependencies]
+libc = "0.2.147"
+
+[target.'cfg(windows)'.dependencies]
+windows-sys = { version = "0.59", features = ["Win32_System_Threading"] }
+
 [dev-dependencies]
 
 [build-dependencies]
