--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,10 +16,8 @@ jobs:
       FORCE_COLOR: 1
     steps:
       - uses: actions/checkout@v4
-      - uses: crate-ci/typos@master
+      # - uses: crate-ci/typos@master
       - uses: Swatinem/rust-cache@v2
-      - run: rm rust-toolchain.toml
-        shell: bash
       - uses: dtolnay/rust-toolchain@master
         with:
           toolchain: nightly
@@ -43,7 +41,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: Swatinem/rust-cache@v2
-      - run: rm rust-toolchain.toml
       - uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{ matrix.rust }}
