--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches: [ main ]
   pull_request:
-    # branches: [ main ]
 
 env:
   CARGO_TERM_COLOR: always
@@ -18,16 +17,38 @@ jobs:
       - uses: actions/checkout@v4
       # - uses: crate-ci/typos@master
       - uses: Swatinem/rust-cache@v2
-      - uses: dtolnay/rust-toolchain@master
+      - uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: nightly
+          toolchain: stable
           components: rustfmt, clippy
       - name: Cargo version
         run: cargo --version
       - name: Check format
         run: cargo fmt --all -- --check
       - name: Check clippy
-        run: cargo clippy --all-targets --all-features -- --deny warnings
+        run: cargo clippy --lib --all-features -- --deny warnings
+
+  build:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ windows-latest, macos-latest, ubuntu-latest ]
+        rust: [ "1.70.0", "stable", "nightly" ]
+    env:
+      RUST_BACKTRACE: 1
+    steps:
+      - uses: actions/checkout@v4
+      - uses: Swatinem/rust-cache@v2
+      - uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: ${{ matrix.rust }}
+      - uses: taiki-e/install-action@v2
+        with:
+          tool: nextest,cargo-nextest
+
+      - name: Build
+        run: cargo +${{ matrix.rust }} build -p rt-trace --lib
 
   test:
     runs-on: ${{ matrix.os }}
@@ -35,7 +56,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ windows-latest, macos-latest, ubuntu-latest ]
-        rust: [ "1.70.0", "stable", "nightly" ]
+        rust: [ "stable" ]
     env:
       RUST_BACKTRACE: 1
     steps:
@@ -63,10 +84,3 @@ jobs:
         run: |
           cargo +${{ matrix.rust }} test -p rt-trace --lib -- --nocapture
           cargo +${{ matrix.rust }} test -p rt-trace --doc
-
-      # - name: Run examples
-      #   run: |
-      #     cargo +${{ matrix.rust }} run --example asynchronous
-      #     cargo +${{ matrix.rust }} run --example synchronous
-      #     cargo +${{ matrix.rust }} run --example get_started
-      #     cargo +${{ matrix.rust }} run --package test-statically-disable
