--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,13 @@
 [workspace]
 members = [
+  "benches",
   "fastrace",
   "fastrace-macro",
   "fastrace-jaeger",
   "fastrace-datadog",
   "fastrace-opentelemetry",
   "fastrace-futures",
-
-  # non-publish crates
-  "examples",
-  "tests/macros",
-  "tests/statically-disable",
+  "rt-trace"
 ]
 resolver = "2"
 
@@ -18,7 +15,7 @@ resolver = "2"
 edition = "2021"
 license = "Apache-2.0"
 repository = "https://github.com/fast/fastrace"
-rust-version = "1.80.0"
+rust-version = "1.70"
 
 [workspace.dependencies]
 # workspace dependencies
