--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -32,28 +32,12 @@ jobs:
           name: Rust Benchmark
           tool: 'cargo'
           output-file-path: output.txt
-          # github-token: ${{ secrets.GITHUB_TOKEN }}
-          # auto-push: true
+          auto-push: true
+          comment-always: true
+          gh-pages-branch: gh-pages
           # Show alert with commit comment on detecting possible performance regression
           alert-threshold: '200%'
-          external-data-json-path: ./cache/benchmark-data.json
+          # external-data-json-path: ./cache/benchmark-data.json
           comment-on-alert: true
           github-token: ${{ secrets.GITHUB_TOKEN }}
           fail-on-alert: true
-          # alert-comment-cc-users: '@ktrz'
-
-      # - name: Store benchmark result - separate results repo
-      #   uses: benchmark-action/github-action-benchmark@v1
-      #   with:
-      #     name: Rust Benchmark
-      #     tool: 'cargo'
-      #     output-file-path: examples/rust/output.txt
-      #     github-token: ${{ secrets.BENCHMARK_ACTION_BOT_TOKEN }}
-      #     auto-push: true
-      #     # Show alert with commit comment on detecting possible performance regression
-      #     alert-threshold: '200%'
-      #     summary-always: true
-      #     comment-on-alert: true
-      #     fail-on-alert: true
-      #     alert-comment-cc-users: '@ktrz'
-      #     gh-repository: 'github.com/benchmark-action/github-action-benchmark-results'
