--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -19,26 +19,26 @@ jobs:
       - name: Run benchmark
         run: cargo bench --bench compare -- --output-format bencher | tee output.txt
 
-      # Download previous benchmark result from cache (if exists)
       - name: Download previous benchmark data
         uses: actions/cache@v4
         with:
           path: ./cache
           key: ${{ runner.os }}-benchmark
 
-      # Run `github-action-benchmark` action
       - name: Store benchmark result
         uses: benchmark-action/github-action-benchmark@v1
         with:
           name: Rust Benchmark
           tool: 'cargo'
           output-file-path: output.txt
-          auto-push: true
+          auto-push: false
           comment-always: true
           gh-pages-branch: gh-pages
-          # Show alert with commit comment on detecting possible performance regression
           alert-threshold: '200%'
-          # external-data-json-path: ./cache/benchmark-data.json
           comment-on-alert: true
           github-token: ${{ secrets.GITHUB_TOKEN }}
           fail-on-alert: true
+
+      - name: Push benchmark result
+        if: github.event_name != 'pull_request'
+        run: git push 'https://mox692:${{ secrets.GITHUB_TOKEN }}@github.com/mox692/fastrace.git' gh-pages:gh-pages
