--- a/rt-trace/Cargo.toml
+++ b/rt-trace/Cargo.toml
@@ -1,16 +1,13 @@
 [package]
 name = "rt-trace"
+edition = "2021"
 version = "0.1.0"
 
 categories = ["development-tools::debugging"]
 description = "Perfetto reporter for fastrace"
 keywords = ["tracing", "span", "perfetto"]
 readme = "README.md"
-
-edition.workspace = true
-license.workspace = true
-repository.workspace = true
-rust-version.workspace = true
+rust-version = "1.70"
 
 [dependencies]
 fastant = "0.1"
@@ -29,7 +26,7 @@ libc = "0.2.147"
 windows-sys = { version = "0.59", features = ["Win32_System_Threading"] }
 
 [dev-dependencies]
-fastrace = { path = "../fastrace" }
+fastrace = "0.7.9"
 criterion = "0.5"
 
 [build-dependencies]
@@ -39,6 +36,3 @@ prost-build = "=0.13.2"
 # protobuf compilation issue
 [target.'cfg(not(target_os = "windows"))'.build-dependencies]
 protobuf-src = "2.1"
-
-[profile.release]
-debug = true
