--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,4 +40,6 @@ tokio = { version = "1.45.0", features = ["full"] }
 
 [profile.bench]
 lto = true
-opt-level = 3
+
+[profile.release]
+debug = true
