--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,5 +41,6 @@ tokio = { version = "1.45.0", features = ["full"] }
 [profile.bench]
 lto = true
 
-[profile.release]
-debug = true
+# Make this uncomment if you're going to do benchmarking.
+# [profile.release]
+# debug = true
