--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -15,6 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: Swatinem/rust-cache@v2
       - run: rustup toolchain update nightly && rustup default nightly
       - name: Run benchmark
         run: cargo bench --bench compare -- --output-format bencher | tee output.txt
