--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: Swatinem/rust-cache@v2
       - run: rustup toolchain update nightly && rustup default nightly
       - name: Run benchmark
-        run: cargo bench --bench compare -- --output-format bencher | tee output.txt
+        run: cargo bench -- --output-format bencher | tee output.txt
 
       - name: Download previous benchmark data
         uses: actions/cache@v4
