--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -16,10 +16,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: Swatinem/rust-cache@v2
+      - name: Install Valgrind
+        uses: taiki-e/install-action@valgrind
       - run: rustup toolchain update nightly && rustup default nightly
+      - run: cargo install --version 0.14.2 iai-callgrind-runner
       - name: Run benchmark
         run: cargo bench -- --output-format bencher | tee output.txt
-
       - name: Download previous benchmark data
         uses: actions/cache@v4
         with:
