Add convert script

--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -23,7 +23,11 @@ jobs:
       - name: Run walltime benchmark 
         run: cargo bench --bench wall* -- --output-format bencher | tee -a output.txt
       - name: Run instruction count benchmark 
-        run: cargo bench --bench inst* | tee -a output.txt
+        run: cargo bench --bench inst* | tee inst.txt
+      - name: Convert format
+        run: python3 ./benches/a.py inst.txt | tee -a output.txt
+      - name: echo 
+        run: cat ./output.txt
       - name: Download previous benchmark data
         uses: actions/cache@v4
         with:
