--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -15,10 +15,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: Swatinem/rust-cache@v2
+      - name: Install Valgrind
+        uses: taiki-e/install-action@valgrind
       - run: rustup toolchain update nightly && rustup default nightly
-      - name: Run benchmark
-        run: cargo bench --bench compare -- --output-format bencher | tee output.txt
-
+      - run: cargo install --version 0.14.2 iai-callgrind-runner
+      - name: Run walltime benchmark 
+        run: cargo bench --bench wall* -- --output-format bencher | tee output.txt
+      - name: Run instruction count benchmark 
+        run: cargo bench --bench 'inst_*' 2>&1 | tee inst.txt
+      - name: Convert format
+        run: python3 ./benches/fmt.py inst.txt 2>&1 | tee -a output.txt
       - name: Download previous benchmark data
         uses: actions/cache@v4
         with:
